--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.4
-flask-cors==3.0.11
+flask==2.3.3
+flask-cors==4.0.0
 requests==2.31.0
-nltk==3.9.1
-scikit-learn==1.3.1
-sentence-transformers==2.2.2  # optional if you use embeddings later
+nltk==3.8.1
+scikit-learn==1.3.0
 python-dotenv==1.0.0
+gunicorn==21.2.0
